# verySmallCompiler

./: .gitattributes  .gitignore  CMakeLists.txt  CMakelists.txt  README.md
docs/Doxygen/html/: annotated.html  classemitter_internals_1_1_emitter-members.html  classemitter_internals_1_1_emitter.html  classes.html  classlexer_internals_1_1_lexer-members.html  classlexer_internals_1_1_lexer.html  classlinter_internals_1_1_linter-members.html  classlinter_internals_1_1_linter.html  classparser_internals_1_1_parser-members.html  classparser_internals_1_1_parser.html  classtoken_internals_1_1_token-members.html  classtoken_internals_1_1_token.html  dir_0a987a166eed282e93eea5e9ef798ff5.html  dir_14b940de33f6d599fdff988f6e34ea61.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bf59d41d727aac54882b42f236ae575e.html  dir_c1d99218c54ea5fb54cb44e4f04a6350.html  dir_d522931ffa1371640980b621734a4381.html  dir_d59469cd927ae9206255ddc847533d82.html  dir_e373cc87f482243755fd8e225fb06a1e.html  dir_edde4b120e4dd10715a236e783e24e86.html  emitter_8cpp_source.html  emitter_8h_source.html  files.html  functions.html  functions_func.html  index.html  lexer_8cpp_source.html  lexer_8h_source.html  linter_8cpp_source.html  linter_8h_source.html  main_8cpp_source.html  menudata.js  namespaceemitter_internals.html  namespacelexer_internals.html  namespacelinter_internals.html  (+9 more)
inputLang/: input.ttc  input1.ttc  input2.ttc  input3.ttc
src/: emitter.cpp  lexer.cpp  linter.cpp  main.cpp  parser.cpp  tokenizer.cpp
src/includes/: emitter.h  lexer.h  linter.h  parser.h  tokenizer.h
(+53 files in other folders)
